# papercrate

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  papercrate.tmux
backend/: Cargo.toml  Dockerfile
backend/examples/: hash_password.rs
backend/migrations/202402240001_create_initial_schema/: down.sql  up.sql
backend/migrations/202502130001_create_jobs/: down.sql  up.sql
backend/migrations/202502130002_create_document_assets/: down.sql  up.sql
backend/migrations/202503040001_enforce_unique_folder_names/: down.sql  up.sql
backend/migrations/202503090001_add_issued_at_to_documents/: down.sql  up.sql
backend/migrations/202503090002_add_name_to_documents/: down.sql  up.sql
backend/migrations/202503090003_rename_name_to_title/: down.sql  up.sql
backend/migrations/202503090004_create_refresh_tokens/: up.sql
backend/migrations/202503120001_drop_asset_dimensions/: down.sql  up.sql
backend/migrations/202503120003_use_version_uuid/: down.sql  up.sql
backend/migrations/202503200001_add_correspondents/: down.sql  up.sql
backend/migrations/202503240001_index_documents_by_folder_title/: down.sql  up.sql
backend/migrations/202503240002_unique_document_names/: down.sql  up.sql
backend/migrations/202503240003_add_metadata_to_document_versions/: down.sql  up.sql
backend/migrations/202503240004_drop_folder_path_cache/: down.sql  up.sql
backend/src/: config.rs  db.rs  error.rs  jobs.rs  lib.rs  main.rs  models.rs  s3.rs  schema.rs  state.rs  storage.rs
backend/src/auth/: jwt.rs  (+2 more)
backend/tests/: auth_flow.rs  documents_flow.rs  folders_flow.rs  tags_flow.rs
(+73 files in other folders)
